Tvorba projektu podruhé.

--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-title: Vytvoø si svùj Bullet Journal
+ï»¿title: Vytvoï¿½ si svï¿½j Bullet Journal
 baseURL: https://friendly-montalcini-7d72fe.netlify.com/
 languageCode: cs-cz
 publishDir: public
