Auto stash before rebase of "refs/heads/master"
Změna názvu.

--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-title: Vytvoř si svůj Bullet Journal
+title: Evropští zápasníci MMA v organizaci UFC
 baseURL: https://friendly-montalcini-7d72fe.netlify.com/
 languageCode: cs-cz
 publishDir: public
